--- a/index.html
+++ b/index.html
@@ -4,8 +4,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>FluffyKilla</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
+ <div class="game">
+  <div id="cat"></div>
+  <div id="dog"></div>
+ </div>
   <script src="script.js"></script>
 </body>
 </html>
