--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
+  <div id="gameDiv">
+    <div>Score: <span id="score">0</span></div>
+    
+</div>
  <div class="game">
   <div id="cat"></div>
   <div id="dog"></div>
